Fix page boundary problem with floating divs going over page boundaries
If a browser attempts to make a page boundary in the middle of a
floating div, it previously screwed up and lost the rest of the div.
By putting the surrounding div as overflow:auto, the float is entirely
enclosed in the line div and then the browser properly breaks at the
area between the div and the level below;

--- a/app/print.css
+++ b/app/print.css
@@ -118,16 +118,15 @@ div#now.hidden {
     display:block;
     height:1px;
     width:100%;
-    border-top:1px dotted black;
+    border-top:1px solid black;
 }
 
-.description, .currency, .currency select ,.show, .rate, .account, .account input, .type, .type select, .button, .buttoncontainer,
-.date, .clickable, .ref, .amount, .xaction .irow, .xaction .brow {
-    page-break-before:avoid;
-    page-break-after:avoid;
-    float:none !important;
+div.newaccount, div.button {
+    display:none !important;
 }
+
 
 .xaction, .xaccount, .xcurrency {
-    page-break-before:auto;
+/*    page-break-before:auto; */
+    overflow:auto;
 }
